zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__move_focus_left_into_stacked_panes.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 3345
expression: snapshot
---
00 (C): ┌ Pane #2 ─────────────────────────────────────────────────┐┌ Pane #14 ─────────────────────────────────────────────────┐
01 (C): ┌ Pane #3 ─────────────────────────────────────────────────┐│                                                           │
02 (C): ┌ Pane #4 ─────────────────────────────────────────────────┐│                                                           │
03 (C): ┌ Pane #5 ─────────────────────────────────────────────────┐│                                                           │
04 (C): ┌ Pane #6 ─────────────────────────────────────────────────┐│                                                           │
05 (C): ┌ Pane #7 ─────────────────────────────────────────────────┐│                                                           │
06 (C): ┌ Pane #8 ─────────────────────────────────────────────────┐│                                                           │
07 (C): ┌ Pane #9 ─────────────────────────────────────────────────┐│                                                           │
08 (C): ┌ Pane #10 ────────────────────────────────────────────────┐│                                                           │
09 (C): ┌ Pane #11 ────────────────────────────────────────────────┐└───────────────────────────────────────────────────────────┘
10 (C): ┌ Pane #12 ────────────────────────────────────────────────┐┌ Pane #15 ─────────────────────────────────────────────────┐
11 (C): ┌ Pane #13 ────────────────────────────────────────────────┐│                                                           │
12 (C): │                                                          ││                                                           │
13 (C): │                                                          ││                                                           │
14 (C): │                                                          ││                                                           │
15 (C): │                                                          ││                                                           │
16 (C): │                                                          ││                                                           │
17 (C): │                                                          ││                                                           │
18 (C): │                                                          ││                                                           │
19 (C): └──────────────────────────────────────────────────────────┘└───────────────────────────────────────────────────────────┘

