zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__move_pane_focus_with_sends_tty_csi_event.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 2615
expression: "format!(\"{:?}\", * tty_stdin_bytes.lock().unwrap())"
---
{2: [27, 91, 79], 1: [27, 91, 73, 27, 91, 79, 27, 91, 73]}
